<resources>
    <string name="app_name">PassengerApp</string>
    <string name="action_settings">Settings</string>
    <string name="register_welcome_text">Passenger Registration</string>
    <string name="home_welcome_text">Please choose to Login or Register</string>
    <string name="register_button">REGISTER</string>
    <string name="password_label">Password</string>
    <string name="username_label">Username</string>
    <string name="name_label">Username</string>
    <string name="login_label">LOGIN</string>
    <string name="start_location_label">Start location :</string>
    <string name="end_location_label">End location :</string>
    <string name="number_passenger_label">Number of passengers :</string>
    <string name="select_pickup_time">Select pickup time</string>
    <string name="price_per_pass_label">Price per passenger :</string>
    <string name="add_journey_button">Add journey</string>
    <string name="edit_journey_button">Edit journey</string>
    <string name="driver_button">DRIVER</string>
    <string name="car_model_button">CAR MODEL</string>
    <string name="price_button">PRICE</string>
    <string name="search_button">SEARCH</string>
    <string name="journey_search_hint">Destination City</string>
</resources>
