<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SearchActivity"
    tools:showIn="@layout/activity_search">

    <FrameLayout
        android:id="@+id/search_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SearchView
                android:id="@+id/search_bar"
                android:layout_width="270dp"
                android:layout_height="52dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:defaultQueryHint="@string/journey_search_hint"/>

            <Button
                android:id="@+id/search_button"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/search_button"
                android:onClick="searchJourneysByDestination"/>

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/journey_sort_buttons"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_area">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/driver_button"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/driver_button"
                android:onClick="sortByDriver"/>

            <Button
                android:id="@+id/car_model_button"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/car_model_button"
                android:onClick="sortByCarModel"/>

            <Button
                android:id="@+id/price_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/price_button"
                android:onClick="sortByPrice"/>

        </LinearLayout>

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/journey_sort_buttons">

        <FrameLayout
            android:id="@+id/cur_journeys"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.991">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/journey_search_driver"
                    android:layout_width="136dp"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/journey_search_car_model"
                    android:layout_width="132dp"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/journey_search_price"
                    android:layout_width="131dp"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

            </LinearLayout>

        </FrameLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
